/*
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under both the MIT license found in the
 * LICENSE-MIT file in the root directory of this source tree and the Apache
 * License, Version 2.0 found in the LICENSE-APACHE file in the root directory
 * of this source tree.
 */

syntax = "proto3";

import "google/protobuf/duration.proto";
import "data.proto";

package buck.health_check;

message Empty {};

// Event to update the HealthCheckContext in the server.
// This is a subset of the data from buck2 daemon events to avoid gRPC
// overheads.
message HealthCheckContextEvent {
  oneof data {
    buck.data.ParsedTargetPatterns parsed_target_patterns = 1;
    buck.data.CommandStart command_start = 2;
    string branched_from_revision = 3;
    bool has_excess_cache_misses = 4;
    buck.data.SystemInfo experiment_configurations = 5;
  }
}

service HealthCheck {
  rpc UpdateContext(HealthCheckContextEvent) returns (Empty);
}
